fix: better contrast for code items on hover

--- a/src/hoc/WithLink.module.scss
+++ b/src/hoc/WithLink.module.scss
@@ -4,4 +4,8 @@
   display: block;
   background-color: $light_charcoal;
   color: $white;
+
+  &:hover {
+    color:$charcoal;
+  }
 }
